update compose and add jwt to provider
